force-app/main/default/objects/Affiliate__c/fields/Theme_Accent_Color__c.field-meta.xml
<CustomField>
    <fullName>Theme_Accent_Color__c</fullName>
    <description>Hex color code for the accent theme color.</description>
    <label>Theme Accent Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>