force-app/main/default/objects/Affiliate__c/fields/Theme_Light_Color__c.field-meta.xml
<CustomField>
    <fullName>Theme_Light_Color__c</fullName>
    <description>Hex color code for the light theme color.</description>
    <label>Theme Light Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>