force-app/main/default/objects/Affiliate__c/fields/Theme_Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>Theme_Primary_Color__c</fullName>
    <description>Hex color code for the primary theme color.</description>
    <label>Theme Primary Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>